# fa-content

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GOVERNANCE.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: README.md  architecture.md  development.md
scripts/: draft-changelog.sh
scripts/hooks/: commit-msg
